<resources>
    <string name="app_name">Golf club</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_connetez_vous">ConnetezVous</string>
    <string name="title_activity_registration">Registration</string>
    <string name="title_activity_bienvenue">Bienvenue</string>
    <string name="title_activity_mon_compte">MonCompte</string>
    <string name="mon_compte_desactive">Désactiver mon compte</string>
    <string name="mon_compte_mes_scores">Mes Scores</string>
    <string name="mes_paiements">Mes paiements</string>
    <string name="mon_compte_editer">Editer</string>
    <string name="title_activity_editer">Editer</string>
    <string name="editer_compte_title">Editer compte</string>
    <string name="editer_compte_pays">Pays</string>
    <string name="edit_compte_sauveguarde">Sauvegarder</string>
    <string name="prenom">Prénom</string>
    <string name="nom_de_famille">Nom de famille</string>
    <string name="adresse_email">Adresse e-mail</string>
    <string name="pays">Pays</string>
    <string name="hint_enregistrement_prenom">Votre prénom ne sera pas divulgué aux autres joueurs.</string>
    <string name="hint_text_nom_de_famille">Votre nom de famille ne sera pas divulgué aux autres joueurs.</string>
    <string name="hint_text_adresse_email">Votre adresse electronique sera utilisée en cas de perte de mot passe.</string>
    <string name="str_pseudo">Pseudo :</string>
    <string name="str_prenom">Nom :</string>
    <string name="str_nom_de_famille">Nom de famille :</string>
    <string name="str_date_de_naissance">Date de Naissance :</string>
    <string name="str_adresse_email">Adresse e-mail :</string>
    <string name="str_handicap">Indice :</string>
    <string name="str_mode_de_paiement">Pays :</string>
    <string name="Handicap">Handicap</string>
    <string name="handicap">Handicap</string>
    <string name="title_activity_country">Country</string>
    <string name="hint_recherche_un_pays">Tapez les 3 premières lettres</string>
    <string name="saisir_pseudo">Veuillez saisir votre pseudonyme</string>
    <string name="adresse_electronique_vs">"Veuillez saisir votre adresse  électronique "</string>
    <string name="pseudo">Pseudo</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="connexion">Connexion</string>
    <string name="deconnexion">Déconnexion</string>
    <string name="golface">GolfAce</string>
    <string name="pseudoinfo">Votre pseudonyme est unique et sera votre identifiant d\'authentification. Vos partenaires de jeu vous verront apparaitre sous ce nom.</string>
    <string name="adresse_electronique">Votre adresse électronique sera utilisée en cas de perte de mot de passe.\n</string>
    <string name="mot_de_passe_hint">Choisissez un mot de passe qui ne reprend ni les syllabes de votre pseudonyme ni celle de votre adresse électronique.\n</string>
    <string name="cmdp_android">Retappez votre mot de passe à l\'indentique du premier.  Nous vérifions que vous n\'avez pas fait d\'erreur. \n</string>
    <string name="code_promotionell_hint">Le code promotionnel est un champ optionnel.  Il peut vous être communiqué par un tiers.\n</string>
    <string name="title_activity_term_and_condi_tion">TermAndCondiTion</string>
    <string name="title_activity_enregistrement_reussi">EnregistrementReussi</string>
    <string name="se_connecter">Se connecter</string>
    <string name="pseudo_mail">"Pseudo ou Adresse électronique "</string>
    <string name="message_enregistrement_success">Votre enregistrement est terminé. Nous vous remercions pour votre inscription. Pour vous authentifier, merci d\'utiliser votre pseudonyme et le mot de passe que vous avez saisi.</string>
    <string name="dob_Str">Date Of Birth</string>
    <string name="date_de_naissance">Date de Naissance:</string>
    <string name="title_activity_camera">Camera</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="choisissez">Choisissez...</string>
    <string name="basculer_payment">Basculer en mode payant</string>
    <string name="mes_transaction">Mes Transaction</string>
    <string name="terminer">Terminé</string>
    <string name="janvier">Janvier</string>
    <string name="fevrier">Février</string>
    <string name="mars">Mars</string>
    <string name="avril">Avril</string>
    <string name="may">May</string>
    <string name="juin">Juin</string>
    <string name="juillet">Juillet</string>
    <string name="aout">Août</string>
    <string name="septembre">Septembre</string>
    <string name="octobre">Octobre</string>
    <string name="novembre">Novembre</string>
    <string name="decembre">Décembre</string>
    <string name="title_activity_mes_transaction">MesTransaction</string>
    <string name="mes_transactions">Mes Transaction</string>
    <string name="montant">Montants</string>
    <string name="date_de_la_transaction">Date de la transaction</string>
    <string name="status">Status</string>
    <string name="id">Id</string>
    <string name="title_activity_mes_scores">MesScores</string>
    <string name="mes_scores">Mes Scores</string>
    <string name="title_activity_desactive_compte">DesactiveCompte</string>
    <string name="confirmer_desactivation">Desactivé...</string>
    <string name="golf_club">Golf Club</string>
    <string name="golf_club_confirmation">Voulez-vous vraiment désactiver votre compte ?</string>
    <string name="oui">Oui</string>
    <string name="non">Non</string>
    <string name="title_activity_trouve_un_golf">TrouveUnGolf</string>
    <string name="trouver_un_golf">Trouver Un Golf</string>
    <string name="recherche">Rechercher</string>
    <string name="dis">Distance </string>
    <string name="distance">Distance :  </string>
    <string name="title_activity_detail_du_golf">DetailDuGolf</string>
    <string name="detail_du_golf">Detail du Golf</string>
    <string name="saisir_un_score">Saisir un score</string>
    <string name="se_mettre_disponibilite">Se mettre en disponibilité</string>
    <string name="reserver">Réserver</string>
    <string name="btclassement">Classement</string>
    <string name="title_activity_saisir_un_score">SaisirUnScore</string>
    <string name="resultat_net">Résultat net</string>
    <string name="par">par</string>
    <string name="title_activity_disponibilite">Disponibilite</string>
    <string name="a_partir_de">à partir de</string>
    <string name="juska">Jusqu\'à</string>
    <string name="annuler">Annuler</string>
    <string name="title_activity_reserver_un_golf">ReserverUnGolf</string>
    <string name="date_de_levenement">Date de L\'événement</string>
    <string name="reserver_le_golf">Réserver Le Golf</string>
    <string name="description_de_levenement">Description de L\'événement</string>
    <string name="km">km</string>
    <string name="holes">Holes</string>
    <string name="slope">Slope:</string>
    <string name="Sunday">Sunday</string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string name="January">January</string>
    <string name="February">February</string>
    <string name="March">March</string>
    <string name="April">April</string>
    <string name="May">May</string>
    <string name="June">June</string>
    <string name="July">July</string>
    <string name="August">August</string>
    <string name="September">September</string>
    <string name="October">October</string>
    <string name="November">November</string>
    <string name="December">December</string>
    <string name="pick_date">Choisir une date</string>
    <string name="title_activity_classement">Classement</string>
    <string name="classement_du_golf">Classement du golf</string>
    <string name="title_activity_fiche_du_joueur">FicheDuJoueur</string>
    <string name="fiche_joueur">Fiche du Joueur</string>
    <string name="classement_do">Classement</string>
    <string name="envoye_message">Envoyer un message</string>
    <string name="mise_en_relation">Mise en relation</string>
    <string name="title_activity_mettre_disponible">MettreDisponible</string>
    <string name="bienvenue">Bienvenue</string>
    <string name="title_activity_pop_up_success">PopUpSuccess</string>
    <string name="ok">Ok</string>
    <string name="sauveguarde_reussi">Sauvegarde réussi</string>
    <string name="lun">Lundi</string>
    <string name="mar">Mardi</string>
    <string name="mercredi">Mercredi</string>
    <string name="jeudi">Jeudi</string>
    <string name="vendredi">Vendredi</string>
    <string name="samedi">Samedi</string>
    <string name="dimanche">Dimanche</string>
    <string name="rechercher_un_golf">Rechercher un golf</string>
    <string name="pas_de_golf_trouve">Pas de golfs trouvés dans un rayon de 25km. Merci de faire une recherche</string>
    <string name="reserver_un_golf">Reserver un golf</string>
    <string name="chargement_sauveguarde_en_cours">Sauveguarde en cours...</string>
    <string name="mes_messages">Mes Messages</string>
    <string name="mes_invitations">Mes Invitation</string>
    <string name="mes_mise_en_relation">Mise en Relations</string>
    <string name="composer_un_message">Composer un Message</string>
    <string name="title_activity_mes_messages">MesMessages</string>
    <string name="title_activity_mes_invitations">MesInvitations</string>
    <string name="title_activity_mes_mises_en_relation">MesMisesEnRelation</string>
    <string name="title_activity_composer_un_message">ComposerUnMessage</string>
    <string name="recipients">Recipients</string>
    <string name="sujet">Sujet</string>
    <string name="messages">Message</string>
    <string name="envoyer">Envoyer</string>
    <string name="title_activity_mes_invitatgions_details">MesInvitatgionsDetails</string>
    <string name="date">Date : </string>
    <string name="courier_entrant_vide">Courrier entrant vide</string>
    <string name="date_prevu">Date Prevu :</string>
    <string name="location">"Location : "</string>
    <string name="adversaire">Adversaire :</string>
    <string name="accepter">Accepter</string>
    <string name="rejeter">Rejeter</string>
    <string name="ignorer">Ignorer</string>
    <string name="title_activity_choisir_le_destinataire">ChoisirLeDestinataire</string>
    <string name="choisir_le_destinataire">Choisir le destinataire</string>
    <string name="aucune_invation_recu">Aucune Invitation</string>
    <string name="plannedDate">Date Planifiée:</string>
    <string name="participant">participants : </string>
    <string name="title_activity_subjet_to_set">SubjetToSet</string>
    <string name="subjet_to_set">Sujet de la Conversation</string>
    <string name="repondre">Repondre</string>
    <string name="title_activity_ajouter_message">AjouterMessage</string>
    <string name="repondre_message">Répondre message</string>
    <string name="title_activity_sujet_conversation">SujetConversation</string>
    <string name="transmi_par">Transmis à</string>
    <string name="h">h</string>
    <string name="title_activity_fiche_du_joeur_message">FicheDuJoeurMessage</string>
    <string name="chargement_msg">Chargement en cours..</string>
    <string name="title_activity_ajout_message">AjoutMessage</string>
    <string name="indice">Indice</string>
    <string name="age">Age</string>
    <string name="religion">Religion</string>
    <string name="region">Region</string>
    <string name="message">Messages</string>
    <string name="invitations">Invitations</string>
    <string name="desc">Destinataire</string>
    <string name="aucune_mise_recu">Aucune Mise en Relation</string>
</resources>