<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fond_golf_home"
    android:gravity="top"
    android:orientation="vertical"
    android:weightSum="100" >

    <!--
    <golf.club.app.utils.VerticalPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/llheader"
        android:background="@drawable/fond_golf_home" >
    -->
 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="100" >

        <TextView
            android:id="@+id/txMessages"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="33.3"
            android:background="@color/button_bleu"
            android:gravity="center"
            android:text="@string/message"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txInvitation"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="33.3"
            android:background="@color/button_bleu"
            android:gravity="center"
            android:text="@string/invitations"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txMiseEnRelation"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="33.4"
            android:background="@color/button_bleu"
            android:gravity="center"
            android:text="@string/mes_mise_en_relation"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="45"
        android:background="@drawable/textbars_golface"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:visibility="gone"
        android:weightSum="100" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:orientation="vertical" >
        </LinearLayout>

        <Button
            android:id="@+id/btMesMessages"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="18"
            android:background="@drawable/connectezvous_bt"
            android:text="@string/mes_messages"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical" >
        </LinearLayout>

        <Button
            android:id="@+id/btMesInvitation"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="18"
            android:background="@drawable/connectezvous_bt"
            android:text="@string/mes_invitations"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical" >
        </LinearLayout>

        <Button
            android:id="@+id/btMiseEnRelation"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="18"
            android:background="@drawable/connectezvous_bt"
            android:text="@string/mes_mise_en_relation"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical" >
        </LinearLayout>

        <Button
            android:id="@+id/btComposerUnMessage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="18"
            android:background="@drawable/connectezvous_bt"
            android:text="@string/composer_un_message"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyMessageDetails"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="90"
        android:background="@drawable/textbars_golface"
        android:orientation="vertical"
        android:visibility="visible" >

        <ListView
            android:id="@+id/msgList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@color/transparent"
            android:dividerHeight="0dp"
            android:scrollbarSize="3dp"
            android:scrollbarThumbVertical="@drawable/scrollbar_drawable" >
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyMiseRelation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="90"
        android:orientation="vertical"
        android:visibility="gone"
        android:weightSum="3" >

        <TextView
            android:id="@+id/txPasDeGolfTrouve"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:background="@drawable/textbars_golface"
            android:gravity="center"
            android:text="@string/aucune_mise_recu"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/blubutton"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyInvitationDetails"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="90"
        android:background="@color/red_fade"
        android:orientation="vertical"
        android:visibility="gone" >

        <ListView
            android:id="@+id/invitationList"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyMiseEnRelationDetails"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="90"
        android:background="@color/fade_blue"
        android:orientation="vertical"
        android:visibility="gone" >

        <ListView
            android:id="@+id/miseList"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        </ListView>
    </LinearLayout>

</LinearLayout>