<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/transparent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/transparent"
        android:gravity="center"
        android:orientation="vertical" >

        <!-- header -->

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@drawable/solid_button_border"
            android:gravity="center" >

            <TextView
                android:id="@+id/txCalender"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/ten_dp"
                android:layout_marginTop="@dimen/ten_dp"
                android:gravity="center"
                android:visibility="gone"
                android:text="@string/pick_date"
                android:textColor="@color/black"
                android:textSize="@dimen/twenty_one"
                android:textStyle="bold" />

            <ScrollView
                android:id="@+id/llcalender"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txCalender"
                android:layout_marginTop="@dimen/five_dp" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:id="@+id/llContainer"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical" >

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:gravity="center_horizontal"
                            android:orientation="horizontal" >

                            <Button
                                android:id="@+id/btnPrev"
                                android:layout_width="40dip"
                                android:layout_height="wrap_content"
                                android:background="@drawable/c_prev_btn_selector" />

                            <TextView
                                android:id="@+id/txtMonth"
                                android:layout_width="200dip"
                                android:layout_height="wrap_content"
                                android:background="@color/white"
                                android:gravity="center"
                                android:text="Month"
                                android:textColor="@color/black"
                                android:textSize="14dip"
                                android:textStyle="bold" />

                            <Button
                                android:id="@+id/btnNext"
                                android:layout_width="40dip"
                                android:layout_height="wrap_content"
                                android:background="@drawable/c_next_btn_selector" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:orientation="horizontal" >

                            <TextView
                                android:layout_width="38dip"
                                android:layout_height="30dip"
                                android:background="@color/white"
                                android:gravity="center"
                                android:text="@string/lun"
                                android:textColor="@color/black"
                                android:textSize="8dip"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="40dip"
                                android:layout_height="30dip"
                                android:background="@color/white"
                                android:gravity="center"
                                android:text="@string/mar"
                                android:textColor="@color/black"
                                android:textSize="8dip"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="40dip"
                                android:layout_height="30dip"
                                android:background="@color/white"
                                android:gravity="center"
                                android:text="@string/mercredi"
                                android:textColor="@color/black"
                                android:textSize="8dip"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="40dip"
                                android:layout_height="30dip"
                                android:background="@color/white"
                                android:gravity="center"
                                android:text="@string/jeudi"
                                android:textColor="@color/black"
                                android:textSize="8dip"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="40dip"
                                android:layout_height="30dip"
                                android:background="@color/white"
                                android:gravity="center"
                                android:text="@string/vendredi"
                                android:textColor="@color/black"
                                android:textSize="8dip"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="40dip"
                                android:layout_height="30dip"
                                android:background="@color/white"
                                android:gravity="center"
                                android:text="@string/samedi"
                                android:textColor="@color/black"
                                android:textSize="8dip"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="40dip"
                                android:layout_height="30dip"
                                android:background="@color/white"
                                android:gravity="center"
                                android:text="@string/dimanche"
                                android:textColor="@color/black"
                                android:textSize="8dip"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2.5dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:weightSum="1.0" >

                        <Button
                            android:id="@+id/btnValidate"
                            android:layout_width="0dip"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.4"
                            android:background="@drawable/connectezvous_bt"
                            android:text="Ok"
                            android:textColor="@color/white"
                            android:textSize="@dimen/twenty_dp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </RelativeLayout>
    </LinearLayout>

    <!-- Menus -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:layout_alignParentBottom="true"
        android:background="@drawable/menu_bg"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="2dip"
        android:visibility="gone" >

        <include layout="@layout/bottom_menu_layout" />
    </LinearLayout>

</RelativeLayout>